# koranteng

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  main.cpp  vcpkg.json
src/objects/: Material.h  Object.h  Sphere.cpp  Sphere.h
src/raytracer/: HitInfo.h  RayTracer.cpp  RayTracer.h
src/scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
